<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    android:orientation="vertical"
    tools:context=".MainActivity2_Indice">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="175dp"
        android:layout_height="167dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginBottom="407dp"
        android:gravity="center|clip_vertical"
        android:onClick="Cuerpo"
        android:text="@string/indice_cuerpo"
        app:backgroundTint="#651FFF"
        app:icon="@drawable/codo"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="70dp"
        app:iconTint="#FFFFFF"
        app:iconTintMode="multiply" />

    <Button
        android:id="@+id/button5"
        android:layout_width="175dp"
        android:layout_height="167dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="217dp"
        android:layout_marginRight="217dp"
        android:onClick="Formas"
        android:text="@string/indice_formas"
        app:icon="@drawable/rombo"
        app:iconPadding="0dp"
        app:iconSize="60dp"
        app:iconTintMode="multiply" />

    <Button
        android:id="@+id/button3"
        android:layout_width="175dp"
        android:layout_height="167dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="119dp"
        android:layout_marginBottom="31dp"
        android:background="#FBC02D"
        android:onClick="Operaciones"
        android:text="@string/indice_operaciones"
        android:translationY="2dp"
        app:icon="@drawable/mas"
        app:iconPadding="0dp"
        app:iconSize="30dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="175dp"
        android:layout_height="167dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="213dp"
        android:layout_marginBottom="407dp"
        android:onClick="Animales"
        android:text="@string/indice_animales"
        app:icon="@drawable/cerdo"
        app:iconSize="55dp"
        app:iconTint="#FFFFFF"
        app:iconTintMode="multiply" />

    <Button
        android:id="@+id/button8"
        android:layout_width="175dp"
        android:layout_height="167dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="214dp"
        android:layout_marginBottom="208dp"
        android:onClick="Colores"
        android:text="@string/indice_colores"
        app:icon="@drawable/rojo"
        app:iconPadding="0dp"
        app:iconSize="40dp"
        app:iconTintMode="multiply" />

</RelativeLayout>