<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoexamen"
    tools:context=".MainActivity2_p4">

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="158dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="26dp"
        android:text="@string/Nombre"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView_calificacion"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="257dp"
        android:layout_marginLeft="257dp"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:text="@string/calificacion_actual"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="305dp"
        android:layout_height="111dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:text="@string/pregunta4"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <ImageView
        android:id="@+id/imageView_preguntaparte"
        android:layout_width="205dp"
        android:layout_height="141dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="94dp"
        android:layout_marginRight="94dp"
        android:layout_marginBottom="209dp"
        app:srcCompat="@drawable/vaca" />

    <EditText
        android:id="@+id/editTextText_respuesta"
        android:layout_width="226dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginBottom="95dp"
        android:ems="10"
        android:hint="Respuesta"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="146dp"
        android:layout_height="59dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="99dp"
        android:onClick="CompararRespuesta"
        android:text="@string/comprobar"
        android:textColor="#070707"
        app:backgroundTint="#FFEA00" />

</RelativeLayout>