<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoexamen"
    tools:context=".MainActivity2_p3">

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="159dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="26dp"
        android:text="@string/Nombre"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView_calificacion"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="252dp"
        android:layout_marginLeft="252dp"
        android:layout_marginTop="29dp"
        android:gravity="center"
        android:text="@string/calificacion_actual"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="323dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/pregunta3"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView_suma"
        android:layout_width="263dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="267dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/editTextText_respuesta"
        android:layout_width="230dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="90dp"
        android:ems="10"
        android:hint="Respuesta"
        android:inputType="number"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="93dp"
        android:onClick="CompararRespuesta"
        android:text="@string/comprobar"
        android:textColor="#070707"
        app:backgroundTint="#FFEA00" />

</RelativeLayout>