<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoexamen"
    tools:context=".MainActivity2_p1">

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="35dp"
        android:text="@string/Nombre"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView_calificacion"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="258dp"
        android:layout_marginLeft="258dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="17dp"
        android:gravity="center"
        android:text="@string/calificacion_actual"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="318dp"
        android:layout_height="124dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:text="@string/pregunta1"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <ImageView
        android:id="@+id/imageView_preguntaparte"
        android:layout_width="242dp"
        android:layout_height="197dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="186dp"
        app:srcCompat="@drawable/codo" />

    <EditText
        android:id="@+id/editTextText_respuesta"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="113dp"
        android:ems="10"
        android:hint="Respuesta"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="113dp"
        android:onClick="CompararRespuesta"
        android:text="@string/comprobar"
        android:textColor="#070707"
        app:backgroundTint="#FFEA00" />
</RelativeLayout>