<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoazul"
    tools:context=".MainActivity2_c_formas">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="245dp"
        android:layout_marginLeft="245dp"
        android:layout_marginTop="445dp"
        android:gravity="center"
        android:text="@string/Elipse"
        android:textColor="#651FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="445dp"
        android:gravity="center"
        android:text="@string/Rombo"
        android:textColor="#651FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="238dp"
        android:layout_marginLeft="238dp"
        android:layout_marginTop="272dp"
        android:gravity="center"
        android:text="@string/Rectángulo"
        android:textColor="#651FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="272dp"
        android:gravity="center"
        android:text="@string/Triángulo"
        android:textColor="#651FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="112dp"
        android:gravity="center"
        android:text="@string/Cuadrado"
        android:textColor="#651FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="231dp"
        android:layout_marginLeft="231dp"
        android:layout_marginTop="112dp"
        android:gravity="center"
        android:text="@string/Círculo"
        android:textColor="#651FFF"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="84dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        app:srcCompat="@drawable/circulo" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="110dp"
        android:layout_height="91dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="19dp"
        app:srcCompat="@drawable/cuadrado" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="121dp"
        android:layout_height="102dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginBottom="155dp"
        app:srcCompat="@drawable/rombo" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="105dp"
        android:layout_height="93dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="154dp"
        android:rotation="21"
        android:rotationX="8"
        app:srcCompat="@drawable/elipse" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="141dp"
        android:layout_height="104dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="166dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        app:srcCompat="@drawable/rectangulo" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="110dp"
        android:layout_height="121dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="152dp"
        app:srcCompat="@drawable/triangulo" />

</RelativeLayout>