<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoexamen"
    tools:context=".MainActivity2_p5">

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="155dp"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/Nombre"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView_calificacion"
        android:layout_width="116dp"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="265dp"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/calificacion_actual"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="256dp"
        android:layout_height="141dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:text="@string/pregunta5"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <ImageView
        android:id="@+id/imageView_preguntaparte"
        android:layout_width="142dp"
        android:layout_height="119dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="195dp"
        android:layout_marginRight="195dp"
        android:layout_marginBottom="204dp"
        app:srcCompat="@drawable/verde" />

    <ImageView
        android:id="@+id/imageView_preguntaparte2"
        android:layout_width="147dp"
        android:layout_height="122dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="203dp"
        app:srcCompat="@drawable/rojo" />

    <EditText
        android:id="@+id/editTextText_respuesta"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="110dp"
        android:ems="10"
        android:hint="Respuesta"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="142dp"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="112dp"
        android:onClick="CompararRespuesta"
        android:text="@string/comprobar"
        android:textColor="#070707"
        app:backgroundTint="#FFEA00" />

</RelativeLayout>